# FeedMap

./: README.md
backend/: .gitignore  pyproject.toml
backend/core/: settings.py  urls.py
backend/interactions_app/: apps.py
backend/roadmaps_app/: apps.py  models.py  serializers.py  urls.py  views.py
docs/: code-style.md
